updated seed file and played around with the css bg colors

--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 .law{
-    background-color: rgb(181, 142, 218)
+    background-color: bisque
 }
 
 .recipe{
-    background-color: aquamarine
+    background-color: blanchedalmond
 }
